Added the Key Insights KPI,spinner if data is not present, and structured the code not to use globals

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
+ 
 }
 
 select,
@@ -22,12 +23,6 @@ option {
 
 }
 
-
-.logo-container {
-    
-    
-    
-}
 
 
 .humdah-logo {
@@ -111,8 +106,12 @@ option {
     cursor: pointer;
 }
 
+.jumbo-btn:hover {
+    background-color: green;
+}
+
 .hdma-disclosure {
-    margin-bottom: 300px;
+    margin-bottom: 200px;
     margin-top: 5px;
     height: 14px;
     font-size: 10px;
@@ -124,7 +123,13 @@ option {
 
 /**************************************     INSIGHTS SECTIONS      **************************************/
 
+/*
 main {
+    display: none;
+}
+*/
+
+section {
     display: none;
 }
 
@@ -366,6 +371,100 @@ input[type="number"] {
     margin-top: 15px;
 }
 
+/*** OVERLAY **/
+
+/** SPINNER **/
+
+.spinner-title {
+    display: none;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 18px;
+    color: #ccc;
+}
+
+.spinner {
+    display: none;
+    position: relative;
+    width: 200px;
+    height: 200px;
+    top: 50;
+    bottom: 0;
+    left: 180;
+    right: 100;
+    margin: auto;
+  }
+  
+  .item {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    text-align: center;
+  }
+  
+  .item-1 {
+    background-color: #FA5667;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    animation: item-1_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  .item-2 {
+    background-color: #7A45E5;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    animation: item-2_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  .item-3 {
+    background-color: #1B91F7;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    animation: item-3_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  .item-4 {
+    background-color: #FAC24C;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+    animation: item-4_move 1.8s cubic-bezier(.6,.01,.4,1) infinite;
+  }
+  
+  @keyframes item-1_move {
+    0%, 100% {transform: translate(0, 0)} 
+    25% {transform: translate(0, 100px)} 
+    50% {transform: translate(100px, 100px)} 
+    75% {transform: translate(100px, 0)} 
+  }
+  
+  @keyframes item-2_move {
+    0%, 100% {transform: translate(0, 0)} 
+    25% {transform: translate(-100px, 0)} 
+    50% {transform: translate(-100px, 100px)} 
+    75% {transform: translate(0, 100px)} 
+  }
+  
+  @keyframes item-3_move {
+    0%, 100% {transform: translate(0, 0)} 
+    25% {transform: translate(0, -100px)} 
+    50% {transform: translate(-100px, -100px)} 
+    75% {transform: translate(-100px, 0)} 
+  }
+  
+  @keyframes item-4_move {
+    0%, 100% {transform: translate(0, 0)} 
+    25% {transform: translate(100px, 0)} 
+    50% {transform: translate(100px, -100px)} 
+    75% {transform: translate(0, -100px)} 
+  }
+
+
+
+
 
 /*********** RESPONSIVENESS ***********************/
 
@@ -411,8 +510,8 @@ input[type="number"] {
 /******************     FOOTER *********************/
 
 footer {
-    margin-top: 300px;
-    height: 300px;
+    margin-top: 200px;
+    height: 500px;
     background-color: #484848;
     color: #ccc;
     text-align: center;
