--- a/main.css
+++ b/main.css
@@ -84,7 +84,8 @@ a {
     color: #777;
 }
 
-.jumbo-btn, .filter-btn {
+.jumbo-btn,
+.filter-btn {
     width: 250px;
     height: 60px;
     border: 1px none #4cae4c;
@@ -102,7 +103,8 @@ a {
 }
 
 
-.jumbo-btn:hover, .filter-btn:hover {
+.jumbo-btn:hover,
+.filter-btn:hover {
     background-color: #0b8d4c;
 }
 
@@ -221,37 +223,13 @@ input[type="number"] {
 }
 
 
-/********************* FILTER BUTTON  ************************/
-
-/* .filter-btn {
-    width: 100%;
-    margin-top: 15px;
-    height: 50px;
-    border: 1px none #4cae4c;
-    border-radius: 10px;
-    background-color: #f0ad4e;
-    background-repeat: no-repeat;
-    font-size: 22px;
-    color: #ffffff;
-    text-decoration: none solid rgba(255, 255, 255, 0.84);
-    text-align: center;
-} */
-
 
 /********************* RESULTS SECTION  ************************/
 
-.hmda-data-container {
-    /*    border: 1px solid pink;*/
-}
-
-
 .hmda-kpi-metrics {
-    /*    border: 1px solid green;*/
+
     margin-top: 10px;
 }
-
-
-/*
 
 
 /********* CARD KPIS **************/
@@ -276,7 +254,6 @@ input[type="number"] {
 
 
 .card-kpi {
-    /*    background-color: #fff;*/
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
@@ -284,7 +261,6 @@ input[type="number"] {
 
 .main-kpi,
 .sub-kpi {
-    /*    border: 1px solid red;*/
     color: #484848;
     padding: 15px;
     text-align: center;
@@ -313,8 +289,6 @@ input[type="number"] {
 
 .sub-kpis {
     margin-top: 10px;
-
-    /*    border: 1px solid purple;*/
 }
 
 .kpi-loan-purpose {
@@ -338,7 +312,6 @@ input[type="number"] {
 }
 
 .hmda-kpi-chart {
-    /*    border: 1px solid red;*/
     height: 400px;
     background-color: #f2f2f2;
     margin-top: 15px;
@@ -507,14 +480,20 @@ input[type="number"] {
 /******************     FOOTER *********************/
 
 footer {
-    margin-top: 200px;
-    height: 500px;
+    margin-top: 75px;
+    height: 300px;
     background-color: #484848;
     color: #ccc;
     text-align: center;
 }
 
 
-footer p {
-    padding-top: 50px;
+.footer-title {
+    padding-top: 100px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.footer-description {
+    font-size: 14px;
 }
